feat: 添加调试模式支持并优化配置更新功能
- 在 `SimpleNotation` 类中添加 `updateOptions` 方法，支持动态更新配置
- 在 `SNConfig` 类中新增 `update` 方法，用于更新配置项
- 在 HTML 中添加调试模式选择器，允许用户动态切换调试模式
- 优化 `parseNote` 和 `parseStave` 方法的实现，增加升号处理逻辑
- 调整页面样式，移除不必要的 CSS 属性，添加语法和常见问题面板

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       body {
         margin: 0;
         padding: 0;
-        height: 100%;
         font-family: 'Noto Sans SC', sans-serif;
         background-color: #f5f5f5;
         position: relative;
@@ -26,8 +25,6 @@
         flex-direction: column;
         padding: 20px;
         box-sizing: border-box;
-        min-height: 100vh;
-        margin: 0;
       }
       .header {
         text-align: center;
@@ -39,11 +36,7 @@
         margin: 0;
         font-size: 3.2rem;
         display: inline-block;
-        background: linear-gradient(
-          135deg,
-          #ff6b3d,
-          /* 珊瑚橙 */ #7b5aff /* 优雅的紫色 */
-        );
+        background: linear-gradient(135deg, #ff6b3d, #7b5aff);
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
@@ -68,7 +61,6 @@
         margin: 1.5rem 0 0;
         font-size: 1.2rem;
         font-weight: 500;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.05);
       }
       #app {
         max-width: 1200px;
@@ -76,8 +68,26 @@
         width: 100%;
         flex: 1;
         display: flex;
-        min-height: 0;
+        min-height: 70vh;
         gap: 20px;
+        flex-direction: row;
+      }
+      .syntax-panel,
+      .qa-panel {
+        max-width: 1200px;
+        width: 100%;
+        margin: 20px auto 0;
+        background: rgba(255, 255, 255, 0.95);
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow:
+          0 4px 6px rgba(0, 0, 0, 0.1),
+          0 1px 3px rgba(0, 0, 0, 0.08);
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        overflow: hidden;
+        box-sizing: border-box;
       }
       .editor-panel {
         flex: 1;
@@ -127,7 +137,8 @@
         min-height: 0;
         background: rgba(255, 255, 255, 0.8);
       }
-      .input-group input {
+      .input-group input,
+      .input-group select {
         padding: 8px 12px;
         border: 1px solid #ddd;
         border-radius: 4px;
@@ -135,7 +146,8 @@
         background: rgba(255, 255, 255, 0.8);
       }
       .input-group input:focus,
-      .input-group textarea:focus {
+      .input-group textarea:focus,
+      .input-group select:focus {
         outline: none;
         border-color: #ff6b3d;
         box-shadow: 0 0 0 2px rgba(255, 107, 61, 0.1);
@@ -224,6 +236,13 @@
             <label for="beat-input">节拍</label>
             <input type="text" id="beat-input" placeholder="请输入节拍..." />
           </div>
+          <div class="input-group">
+            <label for="debug-mode">Debug 模式</label>
+            <select id="debug-mode">
+              <option value="false">关闭</option>
+              <option value="true">开启</option>
+            </select>
+          </div>
         </div>
         <div class="score-lyric-container">
           <div class="input-group">
@@ -243,6 +262,78 @@
         </div>
       </div>
       <div id="container" class="preview-panel"></div>
+    </div>
+    <div class="syntax-panel">
+      <h3 style="color: #333; font-size: 1.5rem; margin-bottom: 1rem">
+        简谱和歌词编写语法
+      </h3>
+      <div
+        style="
+          background-color: #f9f9f9;
+          padding: 1rem;
+          border-radius: 4px;
+          margin-bottom: 1.5rem;
+        "
+      >
+        <h4 style="color: #555; font-size: 1.2rem; margin-bottom: 0.5rem">
+          简谱编写教程
+        </h4>
+        <p>
+          简谱主要由音符、时值、连音线、小节线和休止符等元素组成。以下是详细规则：
+        </p>
+        <ul style="list-style-type: disc; padding-left: 1.5rem">
+          <li><strong>音符</strong>：使用 `1-7` 表示音阶，`0` 表示休止符。</li>
+          <li>
+            <strong>时值</strong>：通过 `/` 后跟数字来表示音符的时值，如 `/2`
+            表示二分音符，`/8` 表示八分音符。若不指定时值，默认时值为四分音符。
+          </li>
+          <li>
+            <strong>小节线</strong>：使用 `|`
+            分隔不同的小节，当换行时不需要加小节线默认换行处为一小节。
+          </li>
+          <li><strong>延长音</strong>：使用 `-` 表示。</li>
+        </ul>
+        <p>示例：</p>
+        <pre
+          style="
+            background-color: #fff;
+            padding: 0.5rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+          "
+        ><code>1,1,5,5|6,6,5,-|4,4,3,3
+2,2,1,-|5,5,4,4|3,3,2,-</code></pre>
+      </div>
+      <div style="background-color: #f9f9f9; padding: 1rem; border-radius: 4px">
+        <h4 style="color: #555; font-size: 1.2rem; margin-bottom: 0.5rem">
+          歌词编写教程
+        </h4>
+        <p>
+          歌词可以包含多行，每行对应简谱中的一个乐句。歌词中的换行和多余空格会被处理，因此可以自由排版。
+        </p>
+        <p>歌词中`-`代表跳过当前的音符</p>
+        <p>示例：</p>
+        <pre
+          style="
+            background-color: #fff;
+            padding: 0.5rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+          "
+        ><code>一闪一闪亮晶晶-
+满天都是小星星-</code></pre>
+      </div>
+    </div>
+    <div class="qa-panel">
+      <h3>常见问题</h3>
+      <div class="qa-item">
+        <h4>Q: 为什么采用换行的方式来确定一句的内容，而不是自动计算？</h4>
+        <p>
+          A:
+          换行的方式可以更清晰地展示歌词和简谱的对应关系，且目前处于初期阶段，计算方式比较容易影响功能实现，在基本功能完善后可以考虑添加自动计算。
+        </p>
+      </div>
+      <!-- 可以根据需要添加更多 Q&A 项 -->
     </div>
     <script type="module" src="/examples/main.ts"></script>
   </body>
