feat: 更新App.vue和index.html以增强响应式布局和尺寸调整功能
在App.vue中引入ResizeObserver以动态监听容器尺寸变化，优化了组件的自适应能力。同时，调整了index.html的样式，确保在小屏幕设备上有更好的展示效果，增强了用户体验。

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,8 @@
         font-family: 'Noto Sans SC', sans-serif;
         background-color: #f5f5f5;
         position: relative;
+        min-width: 768px;
+        overflow: auto;
       }
       body {
         display: flex;
