--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,9 @@
       body {
         margin: 0;
         padding: 0;
-        font-family: 'Noto Sans SC', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC',
+          'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial,
+          'Hiragino Sans GB', 'Heiti SC', 'WenQuanYi Micro Hei', sans-serif;
         background-color: #f5f5f5;
         position: relative;
         min-width: 768px;
