--- a/examples/index.html
+++ b/examples/index.html
@@ -31,7 +31,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
