fix(index.html): 更新viewport meta标签以改善移动设备显示效果
- 修改viewport meta标签，增加最大缩放和用户缩放设置，提升在移动设备上的用户体验。
- 保留标题和样式链接，确保页面结构完整性。

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="ico" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Notation - 简谱展示工具</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap"
-      rel="stylesheet"
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
+    <title>Simple Notation - 简谱展示工具</title>
     <style>
       html,
       body {
