feat(editor): 添加歌词和简谱语法高亮功能
- 在LyricEditor和ScoreEditor组件中引入@lezer/highlight库，增加歌词和简谱的语法高亮支持。
- 定义了歌词和简谱的高亮样式及语法规则，提升编辑器的可读性和用户体验。
- 更新了编辑器的样式，优化了文本显示效果，增强了用户交互体验。

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,8 +9,7 @@
     />
     <title>Simple Notation - 简谱展示工具</title>
     <style>
-      html,
-      body {
+      html {
         margin: 0;
         padding: 0;
         font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC',
@@ -23,12 +22,13 @@
       body {
         display: flex;
         flex-direction: column;
-        padding: 20px;
         box-sizing: border-box;
       }
     </style>
   </head>
-  <body class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen">
+  <body
+    class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen px-20 pt-40 pb-40"
+  >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
