--- a/examples/index.html
+++ b/examples/index.html
@@ -1,35 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="ico" href="/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
-    />
-    <title>Simple Notation - 简谱展示工具</title>
-    <style>
-      html {
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC',
-          'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial,
-          'Hiragino Sans GB', 'Heiti SC', 'WenQuanYi Micro Hei', sans-serif;
-        background-color: #f5f5f5;
-        position: relative;
-        overflow: auto;
-      }
-      body {
-        display: flex;
-        flex-direction: column;
-        box-sizing: border-box;
-      }
-    </style>
-  </head>
-  <body
-    class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen px-4 pt-40 pb-40"
-  >
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="ico" href="/favicon.ico" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <title>Simple Notation - 简谱展示工具</title>
+  <style>
+    html {
+      margin: 0;
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC',
+        'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial,
+        'Hiragino Sans GB', 'Heiti SC', 'WenQuanYi Micro Hei', sans-serif;
+      background-color: #f5f5f5;
+      position: relative;
+      overflow: auto;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      box-sizing: border-box;
+    }
+  </style>
+</head>
+
+<body class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen px-4 pt-40 pb-40">
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
