feat(router): 更新 vue-router 依赖并优化组件结构
- 在 package.json 中添加 vue-router 依赖
- 更新 pnpm-lock.yaml 以包含 vue-router 的版本信息
- 在 Header.vue 组件中引入 vue-router，添加路由逻辑
- 在 PianoWindow.vue 组件中引入 PianoKeyboard 和 PianoGrid 组件，优化布局
- 更新 index.html 中的样式，简化类名

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -10,7 +10,7 @@
     <title>Simple Notation - 简谱展示工具</title>
   </head>
 
-  <body class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen px-4 pt-40 pb-40">
+  <body class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen p-4">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
