--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="ico" href="/favicon.ico" />
@@ -7,7 +7,47 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
-    <title>Simple Notation - 简谱展示工具</title>
+    <title>Simple Notation - 简谱生态工具</title>
+    <meta
+      name="description"
+      content="Simple Notation 是一款集简谱与乐谱展示、乐器陪练、编曲与音高分析、MIDI 设备支持于一体的现代化音乐平台。平台支持简谱与六线谱、和弦图的灵活切换，具备歌词编辑、音高工具、视唱练耳、编曲创作等多样功能，助力音乐学习、创作与教学。\nSimple Notation is a modern music platform integrating numbered and staff notation display, instrument practice, arrangement tools, pitch analysis, and MIDI device support. It features flexible switching between numbered notation, tablature, and chord diagrams, lyric editing, pitch and sight-singing tools, and a variety of creative utilities, empowering music learning, creation, and teaching."
+    />
+    <meta
+      name="keywords"
+      content="简谱, 乐谱, 音乐, 编辑器, Simple Notation, 视唱, 乐器, 伴奏, 记谱, 电子乐谱, 六线谱, 和弦图, 编曲, 音高工具, MIDI, 练习, 教学, 配置化, 伴奏, 视唱练耳, Music Notation, Tablature, Chord Diagram, Arrangement, Pitch Tool, MIDI Device, Practice, Teaching"
+    />
+    <meta name="author" content="Encaik" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Simple Notation - 简谱展示工具" />
+    <meta
+      property="og:description"
+      content="Simple Notation 提供简谱与乐谱展示、乐器陪练、编曲、音高分析、MIDI 设备支持等多样化功能，支持六线谱和和弦图切换，适合音乐学习、创作与教学。\nSimple Notation offers diverse features including notation display, instrument practice, arrangement, pitch analysis, and MIDI support, with flexible switching between tablature and chord diagrams, ideal for music learning, creation, and teaching."
+    />
+    <meta property="og:image" content="/doc/img/preview.png" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Simple Notation - 简谱展示工具" />
+    <meta
+      name="twitter:description"
+      content="Simple Notation 提供简谱与乐谱展示、乐器陪练、编曲、音高分析、MIDI 设备支持等多样化功能，支持六线谱和和弦图切换，适合音乐学习、创作与教学。\nSimple Notation offers diverse features including notation display, instrument practice, arrangement, pitch analysis, and MIDI support, with flexible switching between tablature and chord diagrams, ideal for music learning, creation, and teaching."
+    />
+    <meta name="twitter:image" content="/doc/img/preview.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Simple Notation",
+        "url": "https://your-domain.com/",
+        "description": "Simple Notation 是一个简谱展示与编辑工具，支持乐谱可视化、乐器音频播放、歌词编辑等功能。",
+        "applicationCategory": "MusicApplication",
+        "operatingSystem": "All",
+        "image": "/doc/img/preview.png",
+        "author": {
+          "@type": "Organization",
+          "name": "Encaik"
+        }
+      }
+    </script>
   </head>
 
   <body class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen p-4">
