feat(web): 更新网站标题和描述
- 修改网站标题为"简音创作 - 你的智能乐谱伙伴，灵感直达演奏！"
- 更新网站描述为高效易用的在线乐谱平台，支持文本生成乐谱、简谱与六线谱切换等功能
- 添加简体中文关键词和英文关键词
- 更新 OpenGraph 和 Twitter 卡片信息
- 引入新的网站介绍面板组件

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -7,38 +7,38 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
-    <title>Simple Notation - 简谱生态工具</title>
+    <title>简音创作 - 你的智能乐谱伙伴，灵感直达演奏！</title>
     <meta
       name="description"
-      content="Simple Notation 是一款集简谱与乐谱展示、乐器陪练、编曲与音高分析、MIDI 设备支持于一体的现代化音乐平台。平台支持简谱与六线谱、和弦图的灵活切换，具备歌词编辑、音高工具、视唱练耳、编曲创作等多样功能，助力音乐学习、创作与教学。\nSimple Notation is a modern music platform integrating numbered and staff notation display, instrument practice, arrangement tools, pitch analysis, and MIDI device support. It features flexible switching between numbered notation, tablature, and chord diagrams, lyric editing, pitch and sight-singing tools, and a variety of creative utilities, empowering music learning, creation, and teaching."
+      content="「灵感迸发？三秒成谱！」简音创作是一款高效易用的在线乐谱平台，支持文本生成乐谱、简谱与六线谱切换、动态乐器面板、音色切换、精准播放控制、音高检测、K歌练唱、乐谱导入导出与打印等功能，让音乐创作、学习与演奏更直观、更生动。\nJianyin Creation is an efficient and user-friendly online music notation platform. It supports text-to-score, flexible switching between numbered and tablature notation, dynamic instrument panels, timbre switching, precise playback control, pitch detection, karaoke practice, score import/export, and high-quality printing, making music creation, learning, and performance more intuitive and vivid."
     />
     <meta
       name="keywords"
-      content="简谱, 乐谱, 音乐, 编辑器, Simple Notation, 视唱, 乐器, 伴奏, 记谱, 电子乐谱, 六线谱, 和弦图, 编曲, 音高工具, MIDI, 练习, 教学, 配置化, 伴奏, 视唱练耳, Music Notation, Tablature, Chord Diagram, Arrangement, Pitch Tool, MIDI Device, Practice, Teaching"
+      content="简音创作, 在线乐谱, 乐谱编辑, 简谱, 六线谱, 吉他谱, 口琴谱, 动态乐器面板, 音色切换, 播放控制, 音高检测, K歌, 视唱练耳, 乐谱导入, 乐谱导出, 乐谱打印, 乐谱库, Jianyin, Online Notation, Score Editor, Numbered Notation, Tablature, Guitar Tab, Harmonica, Instrument Panel, Timbre Switch, Playback Control, Pitch Detection, Karaoke, Sight-singing, Score Import, Score Export, Print, Score Library"
     />
     <meta name="author" content="Encaik" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Simple Notation - 简谱展示工具" />
+    <meta property="og:title" content="简音创作 - 你的智能乐谱伙伴，灵感直达演奏！" />
     <meta
       property="og:description"
-      content="Simple Notation 提供简谱与乐谱展示、乐器陪练、编曲、音高分析、MIDI 设备支持等多样化功能，支持六线谱和和弦图切换，适合音乐学习、创作与教学。\nSimple Notation offers diverse features including notation display, instrument practice, arrangement, pitch analysis, and MIDI support, with flexible switching between tablature and chord diagrams, ideal for music learning, creation, and teaching."
+      content="简音创作是一款高效易用的在线乐谱平台，支持文本生成乐谱、简谱与六线谱切换、动态乐器面板、音色切换、精准播放、音高检测、K歌练唱、乐谱导入导出与打印等功能，让音乐创作、学习与演奏更直观生动。\nJianyin Creation is an efficient online music notation platform with text-to-score, notation switching, dynamic instrument panels, timbre switching, precise playback, pitch detection, karaoke, score import/export, and printing."
     />
     <meta property="og:image" content="/doc/img/preview.png" />
-    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:url" content="https://www.s-n.xyz/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Simple Notation - 简谱展示工具" />
+    <meta name="twitter:title" content="简音创作 - 你的智能乐谱伙伴，灵感直达演奏！" />
     <meta
       name="twitter:description"
-      content="Simple Notation 提供简谱与乐谱展示、乐器陪练、编曲、音高分析、MIDI 设备支持等多样化功能，支持六线谱和和弦图切换，适合音乐学习、创作与教学。\nSimple Notation offers diverse features including notation display, instrument practice, arrangement, pitch analysis, and MIDI support, with flexible switching between tablature and chord diagrams, ideal for music learning, creation, and teaching."
+      content="简音创作是一款高效易用的在线乐谱平台，支持文本生成乐谱、简谱与六线谱切换、动态乐器面板、音色切换、精准播放、音高检测、K歌练唱、乐谱导入导出与打印等功能，让音乐创作、学习与演奏更直观生动。\nJianyin Creation is an efficient online music notation platform with text-to-score, notation switching, dynamic instrument panels, timbre switching, precise playback, pitch detection, karaoke, score import/export, and printing."
     />
     <meta name="twitter:image" content="/doc/img/preview.png" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebApplication",
-        "name": "Simple Notation",
-        "url": "https://your-domain.com/",
-        "description": "Simple Notation 是一个简谱展示与编辑工具，支持乐谱可视化、乐器音频播放、歌词编辑等功能。",
+        "name": "简音创作",
+        "url": "https://www.s-n.xyz/",
+        "description": "简音创作是一款高效易用的在线乐谱平台，支持文本生成乐谱、简谱与六线谱切换、动态乐器面板、音色切换、精准播放、音高检测、K歌练唱、乐谱导入导出与打印等功能，让音乐创作、学习与演奏更直观生动。",
         "applicationCategory": "MusicApplication",
         "operatingSystem": "All",
         "image": "/doc/img/preview.png",
