feat(web): 添加百度站点验证元数据并删除旧验证文件

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -32,6 +32,7 @@
       content="简音创作是一款高效易用的在线乐谱平台，支持文本生成乐谱、简谱与六线谱切换、动态乐器面板、音色切换、精准播放、音高检测、K歌练唱、乐谱导入导出与打印等功能，让音乐创作、学习与演奏更直观生动。\nJianyin Creation is an efficient online music notation platform with text-to-score, notation switching, dynamic instrument panels, timbre switching, precise playback, pitch detection, karaoke, score import/export, and printing."
     />
     <meta name="twitter:image" content="/doc/img/preview.png" />
+    <meta name="baidu-site-verification" content="codeva-CYtWlBetKU" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
