feat(web): 添加 Google 站点验证元数据以增强 SEO

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -33,6 +33,7 @@
     />
     <meta name="twitter:image" content="/doc/img/preview.png" />
     <meta name="baidu-site-verification" content="codeva-CYtWlBetKU" />
+    <meta name="google-site-verification" content="FkHwJwOa15z4z8pIG-IvtqMaxwjzvoAnDIQGXQFaON4" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
